--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@kore/server",
+  "name": "@lafe/server",
   "version": "1.0.0",
   "author": "André 'Dezzy' <@andredezzy>",
-  "homepage": "https://api.paymetrade.com",
+  "homepage": "https://api.lafe.glaros.com.br",
   "license": "MIT",
   "scripts": {
     "build": "babel src --extensions \".ts,.js\" --out-dir dist --copy-files",
@@ -20,6 +20,7 @@
     "date-fns": "^2.14.0",
     "date-fns-tz": "^1.0.10",
     "dotenv": "^8.2.0",
+    "exceljs": "^4.1.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
