--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
     "import/no-dynamic-require": "off",
     "no-param-reassign": "off",
     "no-plusplus": "off",
+    "no-continue": "off",
     "no-await-in-loop": "off",
     "import/no-cycle": "off",
     "no-useless-constructor": "off",
