--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "lint-staged": {
     "packages/**/*.{ts,tsx}": [
       "yarn lint:fix",
-      "git add",
+      "git add -A",
       "yarn test --bail --findRelatedTests"
     ]
   },
