--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.5",
+    "git-branch-is": "^4.0.0",
     "husky": "^4.2.5",
     "jest": "^24.7.1",
     "jest-dom": "^3.2.2",
