chore: Add git-branch-is check to husky pre-commit

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
+      "pre-commit": "git-branch-is -r \"^((?!master).)*$\" && lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
