chore: Add table to dashboard

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kore",
+  "description": "A better Sienge dashboard",
   "private": true,
   "version": "1.0.0",
   "author": "André 'Dezzy' <@andredezzy>",
