--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "lint-staged": {
     "packages/**/*.{ts,tsx}": [
       "yarn lint:fix",
-      "git add -A",
+      "git add",
       "yarn test --bail --findRelatedTests"
     ]
   },
