--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
   "cSpell.words": [
+    "Echarts",
     "Lafe",
-    "exceljs"
+    "apexcharts",
+    "exceljs",
+    "fisica",
+    "flaticon",
+    "glyphicon"
   ]
 }
