--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -99,6 +99,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "rickshaw": "1.7.1",
     "tabler-icons": "^1.10.0",
