--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -37,8 +37,11 @@
     "rate-limiter-flexible": "^2.1.10",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^2.3.0",
+    "ts-node-dev": "^1.0.0-pre.49",
+    "tsconfig-paths": "^3.9.0",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
+    "typescript": "^4.0.3",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
@@ -65,8 +68,6 @@
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-transform-typescript-metadata": "^0.3.0",
-    "ts-node-dev": "^1.0.0-pre.49",
-    "tsconfig-paths": "^3.9.0"
+    "babel-plugin-transform-typescript-metadata": "^0.3.0"
   }
 }
