--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,10 +1,11 @@
+# Application
+PORT=3333
+APP_API_URL=http://localhost:3333
+APP_WEB_URL=http://localhost:3000
+
 # JWT
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
-
-# Application
-APP_API_URL=http://localhost:3333
-APP_WEB_URL=http://localhost:3000
 
 # Storage
 STORAGE_DRIVER=disk
